'wisi' in the subject. If possible, use M-x report-emacs-bug.


* wisi 4.1.1
8 Oct 2022

** Ada code builds with alire.

** gnat-compiler split out into separate ELPA package.

** A bug in updating the fringe error marks is fixed.

** Support using eglot to replace some wisi functions; new user
   configuration variables wisi-disable-completion,
   wisi-disable-parser.

* wisi 4.0.beta
9 Jul 2022 beta testing

** Major redesign to support incremental parse.

** New user custom variable wisi-incremental-parse-enable; when
   non-nil, wisi uses incremental parse.

** There is now a log buffer showing all interactions with the parser
   process. The buffer name is given by
   (wisi-parser-transaction-log-buffer-name parser); for Ada it is
   "*Ada-wisi-parser-log*".

** The buffer-local variable containing the wisi parser object is
   split and renamed from wisi--parser to wisi-parser-shared, and
   wisi-parser-local. wisi-parser-shared points to a per-language
   structure; wisi-parser-local contains parser state that is buffer
   local, such as error messages.

** The new command wisi-parse-tree-query allows querying the stored
   parse tree for various things.

** Redesign how indents add, and what some indent functions mean; see
   wisi.info for details. In general, it is easier to arrange indent
   actions to get the desired result. This may require grammar file
   indent action changes; most likely add 'wisi-block' in block
   statements.

** The algorithm for naming conflicts is now more accurate, and the
   format of the %conflict declaration has changed. The old format is
   still supported. Some conflicts have the same name, but others will
   need to be updated.

** wisitoken-parse_table-mode now provides a command
   wisitoken-parse_table-conflict-goto that will find a conflict in
   the parse table file. wisitoken-grammar-mode binds that command to
   "\C-c."

** wisitoken-parse_table-mode now provides a command