@@ -19,6 +19,9 @@ Please send wisi bug reports to bug-gnu-emacs@gnu.org, with
    configuration variables wisi-disable-completion,
    wisi-disable-parser.
 
+** In wisi project files, import_env_var=<name> can be used to inherit
+   an environment variable from the Emacs process.
+
 * wisi 4.0.beta
 9 Jul 2022 beta testing
 
